fixed pom.xml issue with java version 18 and language version 21